--- a/jwebppy/src/main/resources/static/portal/css/basic.css
+++ b/jwebppy/src/main/resources/static/portal/css/basic.css
@@ -279,6 +279,10 @@ input {
 	display: block;
 	height: 6px;
 }
+.split-row-more-compact {
+	display: block;
+	height: 3px;
+}
 .flex-grow{
 	flex: 1;
 }
