--- a/jwebppy/src/main/resources/templates/portal/layout/iv/hq/parts/common/fragments/js.html
+++ b/jwebppy/src/main/resources/templates/portal/layout/iv/hq/parts/common/fragments/js.html
@@ -24,12 +24,4 @@
 <script th:src="@{/portal/js/portal.utils.modal.js}"></script>
 <script th:src="@{/portal/js/datatables/dataTablesDefault.js}"></script>
 <script th:src="@{/portal/js/portal.utils.order.js}"></script>
-
-<!-- For not working CDN -->
-<!-- script th:src="@{/portal/js/jquery/jquery.min.js}"></script>
-<script th:src="@{/portal/js/jquery/jquery-ui.min.js}"></script>
-<script th:src="@{/portal/js/jquery/jquery.fileDownload.js}"></script>
-<script th:src="@{/portal/js/throttle/jquery.ba-throttle-debounce.min.js}"></script>
-<script th:src="@{/portal/js/datatables/datatables.min.js}"></script>
-<script th:src="@{/portal/js/moment/moment.min.js}"></script>
-<script th:src="@{/portal/js/datatables/jqueryDefault.js}"></script -->
+<script th:src="@{/portal/js/datatables/jqueryDefault.js}"></script>
