--- a/jwebppy/src/main/resources/templates/portal/iv/hq/parts/domestic/report/order/list.html
+++ b/jwebppy/src/main/resources/templates/portal/iv/hq/parts/domestic/report/order/list.html
@@ -6,7 +6,7 @@
 	
 <th:block layout:fragment="content">
 	<div class="block-header">
-		<div class="block-title" th:text="#{HQP_T_BUSINESS_TOOLS}"></div>
+		<div class="block-title" th:text="#{HQP_T_PARTS_ORDER_REPORT}"></div>
 		<div class="block-button-area">
 			<button id="BTN_search" type="button" th:text="#{HQP_B_SEARCH}"></button>
 		</div>
