--- a/jwebppy/src/main/resources/templates/portal/iv/hq/parts/domestic/order/create/popup/error_report.html
+++ b/jwebppy/src/main/resources/templates/portal/iv/hq/parts/domestic/order/create/popup/error_report.html
@@ -18,11 +18,14 @@
 	
 	<script>
 	$(function(){
+		
+		console.log(JSON.stringify(opener.errorOrderItems));
+		
 		$tableObj = $("#TBL_grid").DataTable({
 			select: true,// row 선택 기능 켬
 			ordering: false,// 정렬 기능 켬
 			scrollY: 100,
-			fixedColumns: {leftColumns: 1},// 컬럼 고정 켬. (왼쪽 2개 컬럼 고정)
+			//fixedColumns: {leftColumns: 1},// 컬럼 고정 켬. (왼쪽 2개 컬럼 고정)
 			columns : [
 				{name: "materialNo", data: "materialNo", title: "[[#{HQP_L_ORDER_PART_NO}]]"},//Parts No.
 				{
@@ -30,61 +33,48 @@
 					title: "[[#{HQP_L_SIMULATION_ERROR_NOT_EXIST}]]",
 					render: function(data, type, row)
 					{
-						if (row.errorType == "NON_EXIST")
-						{
-							return "X";
-						}
-						
-						return "";
+						return (row.errorType == "NON_EXIST") ? "X" : "";
 					}
 				},
 				{
-					name: "wrongDivision",
-					title: "[[#{HQP_L_SIMULATION_ERROR_WRONG_DIVISION}]]",
+					name: "nonPrice",
+					title: "[[#{HQP_L_SIMULATION_ERROR_NOT_PRICE}]]",
 					render: function(data, type, row)
 					{
-						if (row.errorType == "WRONG_DIVISION")
-						{
-							return "X";
-						}
-						
-						return "";
+						return (row.errorType == "NON_PRICE") ? "X" : "";
 					}
-				},			
+				},
 				{
 					name: "nonPurchase",
 					title: "[[#{HQP_L_SIMULATION_ERROR_NOT_SERVICEABLE}]]",
 					render: function(data, type, row)
 					{
-						if (row.errorType == "NON_PURCHASE")
-						{
-							return "X";
-						}
-						
-						return "";
+						return (row.errorType == "NON_PURCHASE") ? "X" : "";
 					}
-				},				
+				},
+				{
+					name: "hazard",
+					title: "[[#{HQP_L_SIMULATION_ERROR_HAZARD}]]",
+					render: function(data, type, row)
+					{
+						return (row.errorType == "HAZARD_MATNR") ? "X" : "";
+					}
+				},
 				{name: "errorCode", data: "errorCode", title: "[[#{HQP_L_SIMULATION_ERROR_CODE}]]"},//Error Code
 				{name: "errorMessage", data: "errorMessage", title: "[[#{HQP_L_SIMULATION_ERROR_MSG}]]"}//Text	
 			],
 			data: opener.errorOrderItems,
-			drawCallback: function(settings)
-			{
-				ProgressBar.hide();
-			}
+    		initComplete: function() {
+    			ProgressBar.hide();
+    		}
 		});	
 		
-		// window 리사이즈시 그리드 높이 다시 맞춤. (그리드의 parent 요소의 높이에 맞춤)
-		installDataTableResizer($tableObj, $("#AREA_grid"));
-		
-		// dataTable 버그 수정.
-		installDataTableBugFix("TBL_grid");
-		
-		$("#BTN_download").on("click", function() {
-			var gridFileDownload = new GridFileDownload($tableObj);
-			gridFileDownload.fileName = "error_report";
-			gridFileDownload.excelDownload();
-		});	
+		// Datatable grid 초기 설정 셋업
+		initGridTable($tableObj);
 	});
+	
+	$("#BTN_download").on("click", function() {
+		_gridDownload($tableObj, "Error_Report");
+	});	
 	</script>	
 </th:block>
